// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalConfirmationDomainDelete /> <TestModalConfirmationDomainDelete /> should render correctly 1`] = `
Array [
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-1"
    aria-describedby="id-2"
    aria-expanded={false}
    aria-haspopup="dialog"
    className="sc-csDjRa Button__ButtonInner-dXfNcJ febYsK iWxcUO ButtonQuickAction___StyledButton-fmafsA etoUvh"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <IconMock
      className="sc-csDjRa Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ bpTvck dpibyo AjyOr icon"
    />
  </button>,
  <div
    className="cap-tooltip"
    hidden={true}
    id="id-2"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1100,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ModalConfirmationDomainDelete /> <TestModalConfirmationDomainDelete /> should render modal open 1`] = `
Array [
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-1"
    aria-describedby="id-2"
    aria-expanded={true}
    aria-haspopup="dialog"
    className="sc-csDjRa Button__ButtonInner-dXfNcJ febYsK iWxcUO ButtonQuickAction___StyledButton-fmafsA etoUvh"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <IconMock
      className="sc-csDjRa Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ bpTvck dpibyo AjyOr icon"
    />
  </button>,
  <div
    className="cap-tooltip"
    hidden={true}
    id="id-2"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1100,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      data-testid="AnimatePresence"
    >
      <div
        className="sc-csDjRa cLNFbx Modal__ModalContainerInner-gRvBLO"
        onClick={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="sc-csDjRa eKeibo Modal__ModalInner-fNGFsd"
          style={
            Object {
              "opacity": 0,
              "transform": "translateY(-20px) translateZ(0)",
            }
          }
        >
          <header
            className="sc-csDjRa Flex___StyledAppBox-SiGEY bGPrlH"
          >
            <div
              className="sc-csDjRa Flex___StyledAppBox-SiGEY dBMbGw ModalHeader___StyledFlex-hKIJSk YmlkP"
            >
              <h2
                className="sc-csDjRa gOMzoX"
              >
                delete-confirmation
              </h2>
            </div>
            <button
              className="sc-csDjRa Button__ButtonInner-dXfNcJ liVenR iWxcUO"
              onClick={[Function]}
              type="button"
            >
              <IconMock
                className="sc-csDjRa Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ yOzEu dpibyo AjyOr icon"
              />
            </button>
          </header>
          <main
            className="sc-csDjRa Flex___StyledAppBox-SiGEY eABYsx"
          >
            <p
              className="sc-csDjRa hGwkiT"
            >
              are-you-sure-to-delete-something
            </p>
          </main>
          <footer
            className="sc-csDjRa Flex___StyledAppBox-SiGEY kKzyHd frpAOM"
          >
            <div
              className="sc-csDjRa Flex___StyledAppBox-SiGEY bwea-Dz crLbTm"
            >
              <button
                className="sc-csDjRa Button__ButtonInner-dXfNcJ kmfWzB lilFYw"
                onClick={[Function]}
                type="button"
              >
                cancel
              </button>
              <button
                className="sc-csDjRa Button__ButtonInner-dXfNcJ kmfWzB fjccAb"
                onClick={[Function]}
                type="button"
              >
                global.delete
              </button>
            </div>
          </footer>
        </div>
      </div>
    </div>
  </div>,
]
`;
